# openrouter-selector

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
openrouter_selector/: selector.py  ＿init＿.py
